--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
 
 @font-face{
     font-family: Agbalumo;
-    src: url('../text/agbalumo.ttf');
+    src: url('../portfolio/text/agbalumo.ttf');
 }
 
 section{
