--- a/main/portfolio.css
+++ b/main/portfolio.css
@@ -39,6 +39,8 @@ section:nth-child(3){
     z-index: 1;
 }
 
+header
+
 .icon{
     margin-right: 10px;
     padding-top: 20px;
@@ -132,7 +134,8 @@ p a{
 body{
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 .mail-container::after{
@@ -170,6 +173,18 @@ header{
     justify-content: center;
     align-items: center;
     height: 100%;
+    transform-style: preserve-3d;
+    z-index: -1;
+    margin: 0;
+    padding: 0;
+}
+
+.top{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20%;
     transform-style: preserve-3d;
     z-index: -1;
     margin: 0;
@@ -506,7 +521,7 @@ a{
     align-items: center;
     margin: 20px 0px;
     flex-wrap: wrap;
-    padding-top: 100px;
+    padding-bottom: 350px;
 }
 
 .boxblog{
@@ -517,20 +532,23 @@ a{
 }
 
 .imgblog{
-    width: 100%;
-    height: auto;
+    width: 350px;
+    height: 350px;
 }
 
 .imgblog img{
-    width: 100%;
-    height: 100%;
+    width: 350px;
+    height: 350px;
     object-fit: cover;
     object-position: center;
 }
 
 .textblog{
     padding:30px;
+    width: 350px;
+    height:  350px;
     display: flex;
+    background-color: white;
     flex-direction: column;
 }
 
